[package]
name = "pacman_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pacman_communication = { path = "../pacman_communication" }
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
