[package]
name = "pacman_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
log4rs = "1.2.0"
pacman_communication = { path = "../pacman_communication" }
serde_json = "1.0.108"
